Fix text overflowing in bio
eg. http://hummingbird.me/users/FearDubh

--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -664,6 +664,7 @@ User Profile
   .mini-bio {
     height: 65px;
     overflow: hidden;
+    overflow-wrap: break-word;
   }
   .user-info {
     margin-top: 50px;
